@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: checkmount_osf.c,v 1.9 2005/01/03 20:56:45 ezk Exp $
+ * $Id: checkmount_osf.c,v 1.10 2005/05/28 17:34:10 ezk Exp $
  *
  */
 
@@ -69,14 +69,14 @@ fixmount_check_mount(char *host, struct in_addr hostaddr, char *path)
      * Apparently two forms of nfs mount syntax are
      * accepted: host:/path or /path@host
      */
-    if (delim = strchr(fslist[i].f_mntfromname, ':')) {
+    if ((delim = strchr(fslist[i].f_mntfromname, ':'))) {
       *delim = '\0';
       if ((STREQ(delim + 1, path) ||
 	   STREQ(fslist[i].f_mntonname, path)) &&
 	  is_same_host(fslist[i].f_mntfromname,
 		       host, hostaddr))
 	  found = 1;
-    } else if (delim = strchr(fslist[i].f_mntfromname, '@')) {
+    } else if ((delim = strchr(fslist[i].f_mntfromname, '@'))) {
       *delim = '\0';
       if ((STREQ(fslist[i].f_mntfromname, path) ||
 	   STREQ(fslist[i].f_mntonname, path)) &&
